# ttsfm

./: .env  .env.example  .flake8  .gitignore  API_KEY_USAGE.md  CHANGELOG.md  COMBINED_AUDIO_API.md  COMBINED_AUDIO_SUMMARY.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh.md  README_CN.md  VOICE_INSTRUCTIONS_INSIGHTS.md  app.py  celery_worker.py  docker-entrypoint.sh  example_combined_audio.py  example_long_text.py  index.html  index_zh.html  main.py  pressure_test.py  pyproject.toml  requirements.txt  run_combined_audio_tests.py  script.js  server.py  start.bat  styles.css  test_api.py  test_combined_endpoint.py  test_combined_streaming.py  test_queue.py  test_websocket_opus_streaming.py  test_websocket_with_instructions.py
.github/workflows/: auto-release.yml  docker-build-full.yml  docker-build-slim.yml  docker-build.yml  manual-release.yml  publish-pypi.yml  release.yml
docs/: architecture.md  docker-workflows.md  v3.4-dual-image-implementation.md  websocket-streaming.md
proxy/: __init__.py  manager.py
scripts/: test_websocket.py
server/: __init__.py  api.py  handlers.py
static/: index.html  index_zh.html  script.js  styles.css
tests/: README.md  __init__.py  test_audio_combination.py  test_audio_processing.py  test_clients.py  test_combined_audio.py  test_combined_endpoints.py  test_utils.py  test_web_app.py
ttsfm/: __init__.py  async_client.py  audio.py  audio_processing.py  capabilities.py  cli.py  client.py  exceptions.py  models.py  utils.py
ttsfm-web/: app.py  i18n.py  requirements.txt  run.py  websocket_handler.py
ttsfm-web/static/css/: style.css
ttsfm-web/static/js/: api-client.js  i18n.js  playground-enhanced-fixed.js  playground.js  websocket-tts.js
ttsfm-web/templates/: base.html  docs.html  index.html  playground.html  websocket_demo.html
ttsfm-web/translations/: en.json  zh.json
utils/: __init__.py  config.py
